--- a/k8s/bases/backend/api/service.yaml
+++ b/k8s/bases/backend/api/service.yaml
@@ -3,16 +3,15 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: nginx
-  name: nginx
-  namespace: backend
+    app: api
+  name: api
 spec:
   ports:
-  - port: 80
+  - port: 5000
     protocol: TCP
-    targetPort: 80
+    targetPort: 5000
   selector:
-    app: nginx
+    app: api
   type: NodePort
 status:
   loadBalancer: {}
