--- a/k8s/bases/backend/db/kustomization.yaml
+++ b/k8s/bases/backend/db/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ./overlays/dev
-- ./overlays/staging
-- ./overlays/production
+- postgres.yaml
+- import-job.yaml
+- networkpolicy.yaml
